Mon Mar 13 10:09:21 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * tests/Bug_2186_Regression/server.conf:

          Add '-ORBConnectionHandlerCleanup true' to get this test to pass.

Sun Mar 12 10:21:12 UTC 2006  Johnny Willemsen  <jwilemsen@remedy.nl>

        * orbsvcs/orbsvcs/CosEvent/CEC_Event_Loader.cpp:
          Fixed invalid deletes when using the typed event channel and fixed
          some unicode issues. Thanks to Feng Li <fengli at gmail dot com>
          for providing the patches.

Sat Mar 11 12:16:01 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * tests/CollocationLockup/SimpleNamingService.cpp:

          Fixed a warning with gcc.

Fri Mar 10 20:00:45 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/tests/Bug_2247_Regression/Manager.cpp:
        * orbsvcs/tests/Bug_2248_Regression/client.cpp:

          Removed extra "orbsvcs/" prefix when including orbsvcs
          headers.

Fri Mar 10 15:57:32 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        Committing the following on behalf of Adam Mitz
        <mitza at ociweb dot com>.

        * tests/CollocationLockup/AB.idl:
        * tests/CollocationLockup/CollocationLockup.cpp:
        * tests/CollocationLockup/CollocationLockup.mpc:
        * tests/CollocationLockup/SimpleNamingService.cpp:
        * tests/CollocationLockup/SimpleNamingService.idl:
        * tests/CollocationLockup/run_test.pl:

          Added a regression test for Bugzilla #2130, which is a deadlock
          involving servant activation and collocated calls.

Fri Mar 10 15:36:08 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:

          Fixed warning. Thanks to Johnny for the tip off.

Fri Mar 10 14:00:00 UTC 2006  Simon Massey <sma@prismtech.com>

        * orbsvcs/orbsvcs/Naming/Hash_Naming_Context.cpp:
          Remove redundant ACE_PRINT_EXCEPTION when rethrowing
          CANNOT_PROCEED exceptions, to clean up the scoreboard and